--- a/index.html
+++ b/index.html
@@ -3,108 +3,95 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<title>Rikcat Adventures — Fogo Online 1 (Base)</title>
+<title>Rikcat Adventures — Minigames</title>
 <style>
-  body { margin:0; overflow:hidden; background:#6aa5ff; font-family:Arial, sans-serif; }
-  /* telas */
-  #titleScreen, #configScreen { position:fixed; inset:0; display:flex; flex-direction:column; align-items:center; justify-content:center; gap:12px; z-index:60; }
-  #configScreen { display:none; background: rgba(0,0,0,0.9); color:white; }
-  #game { display:none; position:relative; height:100vh; width:100vw; }
-
-  button { font-size:16px; padding:10px 16px; border-radius:10px; border:none; cursor:pointer; }
-  .config-box { background:#4a90e2; padding:16px; border-radius:12px; width:320px; display:flex; flex-direction:column; gap:8px; box-shadow:0 8px 20px rgba(0,0,0,0.25); }
-
-  canvas { display:block; width:100%; height:100%; }
-
-  /* controles mobile */
-  .btn { position:fixed; width:70px; height:70px; background:rgba(255,255,255,0.35); border-radius:50%; display:flex; align-items:center; justify-content:center; user-select:none; z-index:30; font-size:26px; }
-  #left { left:16px; bottom:20px; } 
-  #right { left:96px; bottom:20px; }
-  #jump { right:16px; bottom:20px; width:86px; height:86px; font-size:28px; }
-
-  /* chat */
-  #openChatBtn { position:fixed; left:16px; top:16px; width:50px; height:50px; border-radius:50%; display:none; align-items:center; justify-content:center; background:rgba(255,255,255,0.6); z-index:40; font-size:20px; }
-  #chatContainer { position:fixed; left:16px; top:78px; width:300px; height:220px; display:none; flex-direction:column; background:rgba(0,0,0,0.75); border-radius:10px; z-index:41; overflow:hidden; }
-  #chatBox { flex:1; overflow-y:auto; padding:8px; color:white; font-size:13px; }
-  #chatInput { border:none; padding:8px; outline:none; width:100%; box-sizing:border-box; }
-
-  /* admin modal */
-  #adminModal { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.85); align-items:center; justify-content:center; z-index:80; }
-  #adminInner { background:white; color:#111; padding:16px; border-radius:10px; width:320px; }
-
-  /* fire button */
-  #fireBtn { position:fixed; right:110px; bottom:120px; width:64px; height:64px; border-radius:50%; display:none; z-index:32; font-size:26px; border:none; background:linear-gradient(180deg,#ffb74d,#ff5722); color:white; }
+  body{ margin:0; font-family:sans-serif; background:#6aa5ff; color:#fff; }
+  #topbar{ display:flex; gap:8px; padding:12px; align-items:center; }
+  button{ padding:10px 14px; border-radius:10px; border:none; cursor:pointer; font-weight:600; }
+  .primary{ background:#2196f3; color:white; }
+  .accent{ background:#ffb74d; color:#000; }
+  .muted{ background:rgba(255,255,255,0.12); color:#fff; }
+  #canvasWrap{ position:relative; height:60vh; background:#83b9ff; display:flex; align-items:center; justify-content:center; }
+  canvas{ width:100%; height:100%; display:block; }
+  #minigameMenu{ position:fixed; right:12px; top:72px; width:320px; background:rgba(0,0,0,0.45); padding:12px; border-radius:10px; display:none; z-index:50; }
+  .mg-row{ display:flex; justify-content:space-between; gap:8px; align-items:center; padding:8px 4px; border-bottom:1px solid rgba(255,255,255,0.06); }
+  .mg-row:last-child{ border-bottom:0; }
+  #mgControls{ margin-top:10px; display:flex; gap:8px; flex-wrap:wrap; }
+  #log{ position:fixed; left:12px; bottom:12px; width:320px; max-height:220px; overflow:auto; background:rgba(0,0,0,0.55); padding:8px; border-radius:8px; font-size:13px; }
+  input[type="text"]{ padding:8px; border-radius:8px; border: none; width:100%; box-sizing:border-box; }
+  label{ font-size:13px; opacity:0.9; display:block; margin-bottom:6px; }
 </style>
 </head>
 <body>
 
-<!-- TÍTULO -->
-<div id="titleScreen">
-  <h1 style="color:white;text-shadow:1px 1px #000;">🐱 Rikcat Adventures</h1>
-  <div>
-    <button id="soloBtn" style="background:#4caf50;color:white;">Jogar Solo</button>
-    <button id="multiBtn" style="background:#2196f3;color:white;margin-left:8px;">Multiplayer Online</button>
-  </div>
-  <div style="margin-top:8px;">
-    <button id="configBtn">⚙️ Configurações</button>
+<div id="topbar">
+  <button id="backHome" class="muted">🏠 Voltar</button>
+  <button id="openMinigames" class="primary">🎮 Minigames</button>
+  <div style="flex:1"></div>
+  <div style="display:flex;gap:8px;align-items:center;">
+    <label style="color:#fff;margin:0 8px 0 0;">Nick</label>
+    <input id="nickInputTop" type="text" placeholder="Seu nick" style="padding:8px;border-radius:8px;border:none;width:160px;">
   </div>
 </div>
 
-<!-- CONFIGURAÇÕES -->
-<div id="configScreen">
-  <div class="config-box">
-    <h3 style="margin:0; text-align:center;">⚙️ Configurações</h3>
-
-    <label>Seu Nick</label>
-    <input id="nickInput" placeholder="Nick" maxlength="15" style="padding:8px; border-radius:6px; border:none;" />
-
-    <label>Personagem</label>
-    <select id="skinSelect" style="padding:8px; border-radius:6px; border:none;">
-      <option value="rikcat">Rikcat</option>
-      <option value="polvo">Polvo</option>
-    </select>
-
-    <label>Cor (Rikcat)</label>
-    <input type="color" id="colorSelect" value="#FFB000" style="height:36px; border:none; padding:4px;" />
-
-    <div style="display:flex; gap:8px; justify-content:center; margin-top:8px;">
-      <button id="closeConfig" style="background:#4caf50;color:white;">Salvar e Voltar</button>
-      <button id="adminBtn" style="background:#333;color:white;">Código para ADMs 🎮</button>
-    </div>
-  </div>
-</div>
-
-<!-- MODAL ADM -->
-<div id="adminModal">
-  <div id="adminInner">
-    <h3 style="margin:0 0 8px 0;">Código para ADMs 🎮</h3>
-    <input id="adminPass" type="password" placeholder="Digite a senha" style="width:100%; padding:10px; border-radius:6px; border:1px solid #ddd;" />
-    <div style="display:flex; gap:8px; margin-top:10px; justify-content:center;">
-      <button id="adminSubmit" style="background:#4caf50;color:white;">Confirmar</button>
-      <button id="adminCancel" style="background:#f44336;color:white;">Cancelar</button>
-    </div>
-  </div>
-</div>
-
-<!-- JOGO -->
-<div id="game">
+<div id="canvasWrap">
   <canvas id="canvas"></canvas>
-
-  <!-- CONTROLES -->
-  <div id="left" class="btn">◀️</div>
-  <div id="right" class="btn">▶️</div>
-  <div id="jump" class="btn">🚀</div>
-
-  <!-- FIRE (aparece para ADM com /PDF) -->
-  <button id="fireBtn">🔥</button>
-
-  <!-- CHAT -->
-  <div id="openChatBtn">💬</div>
-  <div id="chatContainer">
-    <div id="chatBox"></div>
-    <input id="chatInput" placeholder="Mensagem..." />
-  </div>
 </div>
+
+<!-- Minigames menu -->
+<div id="minigameMenu">
+  <h3 style="margin:0 0 8px 0;">Minigames</h3>
+
+  <div class="mg-row">
+    <div>
+      <strong>Time Trial</strong><div style="font-size:12px;opacity:0.85">Corrida contra o tempo</div>
+    </div>
+    <div>
+      <button data-mg="timeTrial" class="muted">Entrar</button>
+    </div>
+  </div>
+
+  <div class="mg-row">
+    <div>
+      <strong>Tag</strong><div style="font-size:12px;opacity:0.85">Pega-pega multiplayer</div>
+    </div>
+    <div><button data-mg="tag" class="muted">Entrar</button></div>
+  </div>
+
+  <div class="mg-row">
+    <div>
+      <strong>Capture The Flag</strong><div style="font-size:12px;opacity:0.85">Capture a bandeira</div>
+    </div>
+    <div><button data-mg="ctf" class="muted">Entrar</button></div>
+  </div>
+
+  <div class="mg-row">
+    <div>
+      <strong>Survival Waves</strong><div style="font-size:12px;opacity:0.85">Sobreviva às ondas</div>
+    </div>
+    <div><button data-mg="survival" class="muted">Entrar</button></div>
+  </div>
+
+  <div style="margin-top:10px;">
+    <label>Room code (opcional)</label>
+    <input id="roomCodeInput" type="text" placeholder="codigo_da_sala (ex: sala123)">
+  </div>
+
+  <div id="mgControls">
+    <button id="joinBtn" class="accent">Join / Create</button>
+    <button id="startBtn" class="primary">Start (host)</button>
+    <button id="leaveBtn" class="muted">Leave</button>
+    <button id="backMenuBtn" class="muted">Fechar</button>
+  </div>
+
+  <div style="margin-top:8px;">
+    <label>Minigame state</label>
+    <div id="mgState" style="padding:8px;background:rgba(255,255,255,0.06);border-radius:6px;min-height:40px"></div>
+  </div>
+
+</div>
+
+<div id="log"></div>
 
 <script type="module" src="./game.js"></script>
 </body>
