--- a/index.html
+++ b/index.html
@@ -3,96 +3,114 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<title>Rikcat Adventures — Minigames</title>
+<title>Rikcat Adventures — Minigames + Online</title>
 <style>
-  body{ margin:0; font-family:sans-serif; background:#6aa5ff; color:#fff; }
-  #topbar{ display:flex; gap:8px; padding:12px; align-items:center; }
-  button{ padding:10px 14px; border-radius:10px; border:none; cursor:pointer; font-weight:600; }
-  .primary{ background:#2196f3; color:white; }
-  .accent{ background:#ffb74d; color:#000; }
-  .muted{ background:rgba(255,255,255,0.12); color:#fff; }
-  #canvasWrap{ position:relative; height:60vh; background:#83b9ff; display:flex; align-items:center; justify-content:center; }
-  canvas{ width:100%; height:100%; display:block; }
-  #minigameMenu{ position:fixed; right:12px; top:72px; width:320px; background:rgba(0,0,0,0.45); padding:12px; border-radius:10px; display:none; z-index:50; }
-  .mg-row{ display:flex; justify-content:space-between; gap:8px; align-items:center; padding:8px 4px; border-bottom:1px solid rgba(255,255,255,0.06); }
-  .mg-row:last-child{ border-bottom:0; }
-  #mgControls{ margin-top:10px; display:flex; gap:8px; flex-wrap:wrap; }
-  #log{ position:fixed; left:12px; bottom:12px; width:320px; max-height:220px; overflow:auto; background:rgba(0,0,0,0.55); padding:8px; border-radius:8px; font-size:13px; }
-  input[type="text"]{ padding:8px; border-radius:8px; border: none; width:100%; box-sizing:border-box; }
-  label{ font-size:13px; opacity:0.9; display:block; margin-bottom:6px; }
+  body { margin:0; overflow:hidden; background:#2f86c9; font-family:sans-serif; }
+  #titleScreen, #configScreen { position:fixed; inset:0; display:flex; flex-direction:column; align-items:center; justify-content:center; gap:12px; z-index:50; color:white; }
+  #configScreen { display:none; background: rgba(0,0,0,0.85); }
+  #game { display:none; position:relative; height:100vh; width:100vw; }
+
+  button { font-size:16px; padding:8px 14px; border-radius:10px; border:none; cursor:pointer; }
+  .config-box { background:#4a90e2; padding:18px; border-radius:12px; width:300px; display:flex; flex-direction:column; gap:8px; }
+
+  canvas { display:block; width:100%; height:100%; }
+
+  .btn { position:fixed; width:70px; height:70px; background:rgba(255,255,255,0.35); border-radius:50%; display:flex; align-items:center; justify-content:center; user-select:none; z-index:20; }
+  #left { left:20px; bottom:20px; } 
+  #right { left:100px; bottom:20px; }
+  #jump { right:20px; bottom:20px; width:84px; height:84px; }
+
+  #fireBtn { position:fixed; right:110px; bottom:120px; width:64px; height:64px; border-radius:50%; display:none; z-index:22; font-size:28px; border:none; background:linear-gradient(180deg,#ffb74d,#ff5722); }
+
+  #openChatBtn { position:fixed; left:15px; top:15px; width:50px; height:50px; border-radius:50%; display:none; align-items:center; justify-content:center; background:rgba(255,255,255,0.4); z-index:40; }
+  #chatContainer { position:fixed; left:15px; top:80px; width:280px; height:220px; display:none; flex-direction:column; background:rgba(0,0,0,0.7); border-radius:8px; z-index:40; overflow:hidden; }
+  #chatBox { flex:1; overflow-y:auto; padding:8px; color:white; font-size:13px; }
+  #chatInput { border:none; padding:8px; outline:none; }
+
+  /* Minigame menu */
+  #minigameMenu { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.7); z-index:120; align-items:center; justify-content:center; }
+  #minigameMenuInner { background:#fff; padding:18px; border-radius:12px; width:320px; max-width:90%; }
+  .mg-btn { padding:10px; border-radius:8px; border:none; cursor:pointer; background:#2196f3; color:white; width:100%; text-align:left; margin-bottom:8px; }
 </style>
 </head>
 <body>
 
-<div id="topbar">
-  <button id="backHome" class="muted">🏠 Voltar</button>
-  <button id="openMinigames" class="primary">🎮 Minigames</button>
-  <div style="flex:1"></div>
-  <div style="display:flex;gap:8px;align-items:center;">
-    <label style="color:#fff;margin:0 8px 0 0;">Nick</label>
-    <input id="nickInputTop" type="text" placeholder="Seu nick" style="padding:8px;border-radius:8px;border:none;width:160px;">
+<!-- TITLE -->
+<div id="titleScreen">
+  <h1 style="font-size:36px;margin:0;">🐱 Rikcat Adventures</h1>
+  <div style="display:flex;gap:10px;">
+    <button id="soloBtn" style="background:#4caf50;color:white;">Jogar Solo</button>
+    <button id="multiBtn" style="background:#2196f3;color:white;">Multiplayer Online</button>
   </div>
-</div>
-
-<div id="canvasWrap">
-  <canvas id="canvas"></canvas>
-</div>
-
-<!-- Minigames menu -->
-<div id="minigameMenu">
-  <h3 style="margin:0 0 8px 0;">Minigames</h3>
-
-  <div class="mg-row">
-    <div>
-      <strong>Time Trial</strong><div style="font-size:12px;opacity:0.85">Corrida contra o tempo</div>
-    </div>
-    <div>
-      <button data-mg="timeTrial" class="muted">Entrar</button>
-    </div>
-  </div>
-
-  <div class="mg-row">
-    <div>
-      <strong>Tag</strong><div style="font-size:12px;opacity:0.85">Pega-pega multiplayer</div>
-    </div>
-    <div><button data-mg="tag" class="muted">Entrar</button></div>
-  </div>
-
-  <div class="mg-row">
-    <div>
-      <strong>Capture The Flag</strong><div style="font-size:12px;opacity:0.85">Capture a bandeira</div>
-    </div>
-    <div><button data-mg="ctf" class="muted">Entrar</button></div>
-  </div>
-
-  <div class="mg-row">
-    <div>
-      <strong>Survival Waves</strong><div style="font-size:12px;opacity:0.85">Sobreviva às ondas</div>
-    </div>
-    <div><button data-mg="survival" class="muted">Entrar</button></div>
-  </div>
-
-  <div style="margin-top:10px;">
-    <label>Room code (opcional)</label>
-    <input id="roomCodeInput" type="text" placeholder="codigo_da_sala (ex: sala123)">
-  </div>
-
-  <div id="mgControls">
-    <button id="joinBtn" class="accent">Join / Create</button>
-    <button id="startBtn" class="primary">Start (host)</button>
-    <button id="leaveBtn" class="muted">Leave</button>
-    <button id="backMenuBtn" class="muted">Fechar</button>
-  </div>
-
   <div style="margin-top:8px;">
-    <label>Minigame state</label>
-    <div id="mgState" style="padding:8px;background:rgba(255,255,255,0.06);border-radius:6px;min-height:40px"></div>
+    <button id="minigamesBtn" style="background:#ff9800;color:white;">🎮 Minigames</button>
+    <button id="configBtn" style="margin-left:8px;">⚙️ Configurações</button>
   </div>
-
 </div>
 
-<div id="log"></div>
+<!-- CONFIG -->
+<div id="configScreen">
+  <div class="config-box">
+    <h3 style="margin:0;">⚙️ Configurações</h3>
+    <label>Seu Nick</label>
+    <input id="nickInput" placeholder="Nick" maxlength="15" />
+    <label>Personagem</label>
+    <select id="skinSelect">
+      <option value="rikcat">Rikcat</option>
+      <option value="polvo">Polvo</option>
+    </select>
+    <label>Cor do Rikcat</label>
+    <input type="color" id="colorSelect" value="#FFB000" />
+    <div style="display:flex; gap:8px; margin-top:8px;">
+      <button id="closeConfig" style="background:#4caf50;color:white; flex:1;">Salvar e Voltar</button>
+      <button id="adminBtn" style="flex:1;">Código para ADMs 🎮</button>
+    </div>
+  </div>
+</div>
 
+<!-- ADMIN (modal) -->
+<div id="adminScreen" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.85); align-items:center; justify-content:center; z-index:999;">
+  <div style="background:#fff;padding:18px;border-radius:10px;width:320px;text-align:center;">
+    <h3>Coloque a senha</h3>
+    <input id="adminPass" type="password" placeholder="senha" style="width:100%; padding:8px; margin:8px 0; border-radius:6px;" />
+    <div style="display:flex;gap:8px; justify-content:center;">
+      <button id="adminSubmit" style="background:#4caf50;color:white;padding:8px 12px;border-radius:8px;">OK</button>
+      <button id="adminCancel" style="background:#f44336;color:white;padding:8px 12px;border-radius:8px;">Cancelar</button>
+    </div>
+  </div>
+</div>
+
+<!-- MINIGAME MENU -->
+<div id="minigameMenu">
+  <div id="minigameMenuInner">
+    <h3 style="margin-top:0">Minigames</h3>
+    <div id="minigameList"></div>
+    <div style="display:flex;gap:8px;margin-top:12px;">
+      <button id="closeMinigameMenu" style="flex:1;">Fechar</button>
+    </div>
+  </div>
+</div>
+
+<!-- GAME -->
+<div id="game">
+  <canvas id="canvas"></canvas>
+
+  <div id="left" class="btn">⬅️</div>
+  <div id="right" class="btn">➡️</div>
+  <div id="jump" class="btn">🚀</div>
+
+  <button id="fireBtn">🔥</button>
+
+  <div id="openChatBtn">💬</div>
+  <div id="chatContainer">
+    <div id="chatBox"></div>
+    <input id="chatInput" placeholder="Digite sua mensagem..." />
+  </div>
+</div>
+
+<!-- modules -->
+<script type="module" src="./firebase.js"></script>
+<script type="module" src="./rikcat.js"></script>
 <script type="module" src="./game.js"></script>
 </body>
 </html>
