--- a/index.html
+++ b/index.html
@@ -1,111 +1,69 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
-<title>Rikcat Adventures — Fogo Online 1 (Base)</title>
-<style>
-  body { margin:0; overflow:hidden; background:#6aa5ff; font-family:Arial, sans-serif; }
-  /* telas */
-  #titleScreen, #configScreen { position:fixed; inset:0; display:flex; flex-direction:column; align-items:center; justify-content:center; gap:12px; z-index:60; }
-  #configScreen { display:none; background: rgba(0,0,0,0.9); color:white; }
-  #game { display:none; position:relative; height:100vh; width:100vw; }
-
-  button { font-size:16px; padding:10px 16px; border-radius:10px; border:none; cursor:pointer; }
-  .config-box { background:#4a90e2; padding:16px; border-radius:12px; width:320px; display:flex; flex-direction:column; gap:8px; box-shadow:0 8px 20px rgba(0,0,0,0.25); }
-
-  canvas { display:block; width:100%; height:100%; }
-
-  /* controles mobile */
-  .btn { position:fixed; width:70px; height:70px; background:rgba(255,255,255,0.35); border-radius:50%; display:flex; align-items:center; justify-content:center; user-select:none; z-index:30; font-size:26px; }
-  #left { left:16px; bottom:20px; } 
-  #right { left:96px; bottom:20px; }
-  #jump { right:16px; bottom:20px; width:86px; height:86px; font-size:28px; }
-
-  /* chat */
-  #openChatBtn { position:fixed; left:16px; top:16px; width:50px; height:50px; border-radius:50%; display:none; align-items:center; justify-content:center; background:rgba(255,255,255,0.6); z-index:40; font-size:20px; }
-  #chatContainer { position:fixed; left:16px; top:78px; width:300px; height:220px; display:none; flex-direction:column; background:rgba(0,0,0,0.75); border-radius:10px; z-index:41; overflow:hidden; }
-  #chatBox { flex:1; overflow-y:auto; padding:8px; color:white; font-size:13px; }
-  #chatInput { border:none; padding:8px; outline:none; width:100%; box-sizing:border-box; }
-
-  /* admin modal */
-  #adminModal { display:none; position:fixed; inset:0; background:rgba(0,0,0,0.85); align-items:center; justify-content:center; z-index:80; }
-  #adminInner { background:white; color:#111; padding:16px; border-radius:10px; width:320px; }
-
-  /* fire button */
-  #fireBtn { position:fixed; right:110px; bottom:120px; width:64px; height:64px; border-radius:50%; display:none; z-index:32; font-size:26px; border:none; background:linear-gradient(180deg,#ffb74d,#ff5722); color:white; }
-</style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+    <title>Rikcat Adventures — Cuphead Boss Edition</title>
+    <style>
+        body { margin:0; overflow:hidden; background:#2f86c9; font-family:sans-serif; }
+        #titleScreen, #playMenu, #othersMenu, #configScreen { position:fixed; inset:0; display:flex; flex-direction:column; align-items:center; justify-content:center; gap:12px; z-index:50; color:white; }
+        #playMenu, #othersMenu, #configScreen { display:none; }
+        button { font-size:18px; padding:10px 20px; border-radius:10px; border:none; cursor:pointer; }
+        .green { background:#2ecc71; color:white; }
+        .cyan { background:#1abc9c; color:white; }
+        .gray { background:#5f5f5f; color:white; }
+        canvas { display:block; width:100%; height:100vh; }
+        .btn { position:fixed; width:70px; height:70px; background:rgba(255,255,255,0.35); border-radius:50%; display:flex; align-items:center; justify-content:center; user-select:none; z-index:20; }
+        #left{left:20px;bottom:20px;} #right{left:100px;bottom:20px;} #jump{right:20px;bottom:20px;}
+        #openChatBtn{position:fixed;left:15px;top:15px;width:50px;height:50px;border-radius:50%;display:none;align-items:center;justify-content:center;background:rgba(255,255,255,0.4);z-index:40;}
+        #chatContainer{position:fixed;left:15px;top:80px;width:280px;height:220px;display:none;flex-direction:column;background:rgba(0,0,0,0.7);border-radius:8px;z-index:40;overflow:hidden;}
+        #chatBox{flex:1;overflow-y:auto;padding:8px;color:white;font-size:13px;} #chatInput{border:none;padding:8px;outline:none;}
+    </style>
 </head>
 <body>
-
-<!-- TÍTULO -->
-<div id="titleScreen">
-  <h1 style="color:white;text-shadow:1px 1px #000;">🐱 Rikcat Adventures</h1>
-  <div>
-    <button id="soloBtn" style="background:#4caf50;color:white;">Jogar Solo</button>
-    <button id="multiBtn" style="background:#2196f3;color:white;margin-left:8px;">Multiplayer Online</button>
-  </div>
-  <div style="margin-top:8px;">
-    <button id="configBtn">⚙️ Configurações</button>
-  </div>
-</div>
-
-<!-- CONFIGURAÇÕES -->
-<div id="configScreen">
-  <div class="config-box">
-    <h3 style="margin:0; text-align:center;">⚙️ Configurações</h3>
-
-    <label>Seu Nick</label>
-    <input id="nickInput" placeholder="Nick" maxlength="15" style="padding:8px; border-radius:6px; border:none;" />
-
-    <label>Personagem</label>
-    <select id="skinSelect" style="padding:8px; border-radius:6px; border:none;">
-      <option value="rikcat">Rikcat</option>
-      <option value="polvo">Polvo</option>
-    </select>
-
-    <label>Cor (Rikcat)</label>
-    <input type="color" id="colorSelect" value="#FFB000" style="height:36px; border:none; padding:4px;" />
-
-    <div style="display:flex; gap:8px; justify-content:center; margin-top:8px;">
-      <button id="closeConfig" style="background:#4caf50;color:white;">Salvar e Voltar</button>
-      <button id="adminBtn" style="background:#333;color:white;">Código para ADMs 🎮</button>
+    <div id="titleScreen">
+        <h1>🐱 Rikcat Adventures</h1>
+        <div style="display:flex;gap:10px;">
+            <button id="playBtn" style="background:#ffd54f;color:#000;">JOGAR</button>
+            <button id="configBtn">⚙️ Configurações</button>
+        </div>
     </div>
-  </div>
-</div>
 
-<!-- MODAL ADM -->
-<div id="adminModal">
-  <div id="adminInner">
-    <h3 style="margin:0 0 8px 0;">Código para ADMs 🎮</h3>
-    <input id="adminPass" type="password" placeholder="Digite a senha" style="width:100%; padding:10px; border-radius:6px; border:1px solid #ddd;" />
-    <div style="display:flex; gap:8px; margin-top:10px; justify-content:center;">
-      <button id="adminSubmit" style="background:#4caf50;color:white;">Confirmar</button>
-      <button id="adminCancel" style="background:#f44336;color:white;">Cancelar</button>
+    <div id="playMenu">
+        <h2>Jogar</h2>
+        <button id="soloBtn" class="green">Solo</button>
+        <button id="multiBtn" class="cyan">Multiplayer</button>
+        <button id="othersBtn" class="gray">Outros</button>
+        <button id="backFromPlay">Voltar</button>
     </div>
-  </div>
-</div>
 
-<!-- JOGO -->
-<div id="game">
-  <canvas id="canvas"></canvas>
+    <div id="othersMenu">
+        <h2>Outros</h2>
+        <button id="cupheadBtn" style="background:#222;color:#fff;">Cuphead Boss</button>
+        <button id="backFromOthers">Voltar</button>
+    </div>
 
-  <!-- CONTROLES -->
-  <div id="left" class="btn">◀️</div>
-  <div id="right" class="btn">▶️</div>
-  <div id="jump" class="btn">🚀</div>
+    <div id="configScreen">
+        <div style="background:#4a90e2;padding:20px;border-radius:12px;display:flex;flex-direction:column;gap:8px;">
+            <h3>Configurações</h3>
+            <input id="nickInput" placeholder="Nick" maxlength="15" />
+            <select id="skinSelect">
+                <option value="rikcat">Rikcat</option>
+                <option value="polvo">Polvo</option>
+            </select>
+            <input type="color" id="colorSelect" value="#FFB000" />
+            <button id="saveConfig" class="green">Salvar</button>
+            <button id="cancelConfig">Cancelar</button>
+        </div>
+    </div>
 
-  <!-- FIRE (aparece para ADM com /PDF) -->
-  <button id="fireBtn">🔥</button>
+    <div id="game" style="display:none;">
+        <canvas id="canvas"></canvas>
+        <div id="left" class="btn">⬅️</div>
+        <div id="right" class="btn">➡️</div>
+        <div id="jump" class="btn">🚀</div>
+    </div>
 
-  <!-- CHAT -->
-  <div id="openChatBtn">💬</div>
-  <div id="chatContainer">
-    <div id="chatBox"></div>
-    <input id="chatInput" placeholder="Mensagem..." />
-  </div>
-</div>
-
-<script type="module" src="./game.js"></script>
+    <script type="module" src="./game.js"></script>
 </body>
 </html>
