--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       justify-content: center;
       align-items: center;
       gap: 15px;
+      z-index: 20;
     }
 
     button {
@@ -49,6 +50,7 @@
       background: rgba(0,0,0,0.6);
       color: white;
       display: none;
+      z-index: 25;
     }
 
     #messages {
@@ -75,6 +77,7 @@
       border-radius: 50%;
       font-size: 22px;
       display: none;
+      z-index: 30;
     }
   </style>
 </head>
@@ -87,7 +90,8 @@
     <button class="config" onclick="openConfig()">Configurações</button>
   </div>
 
-  <canvas id="game" width="800" height="450"></canvas>
+  <!-- canvas — não precisa definir width/height aqui, game.js faz resize -->
+  <canvas id="game"></canvas>
 
   <div id="chat">
     <div id="messages"></div>
