--- a/index.html
+++ b/index.html
@@ -2,63 +2,135 @@
 <html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
-<title>Rikcat Adventures — FO1 (Base)</title>
+<title>Rikcat Adventures — FO3</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
 <style>
-  body{ margin:0; overflow:hidden; background:#1e90ff; font-family:Arial, sans-serif; }
-  canvas{ display:block; background:#87ceeb; width:100%; height:100vh; }
-  #menu{ position:fixed; inset:0; background:#1e90ff; display:flex; flex-direction:column; justify-content:center; align-items:center; gap:12px; z-index:50; }
-  button{ padding:12px 22px; font-size:18px; border:none; border-radius:10px; cursor:pointer; }
-  .solo{ background:#2ecc71; } .multi{ background:#00ffff; } .config{ background:#5f5f5f; color:#fff; }
-  #configScreen{ position:fixed; inset:0; display:none; background:rgba(0,0,0,0.85); z-index:60; align-items:center; justify-content:center; }
-  .config-box{ background:#4a90e2; padding:18px; width:300px; border-radius:12px; color:white; display:flex; flex-direction:column; gap:8px; }
-  .btn{ position:fixed; width:70px; height:70px; border-radius:50%; background:rgba(255,255,255,0.35); display:flex; align-items:center; justify-content:center; font-size:28px; user-select:none; z-index:40; }
-  #left{ left:18px; bottom:18px; } #right{ left:100px; bottom:18px; } #jump{ right:18px; bottom:18px; }
-  #chatBar{ position:fixed; bottom:0; left:0; width:100%; background:rgba(0,0,0,0.6); color:white; display:none; z-index:45; }
-  #messages{ max-height:140px; overflow-y:auto; padding:8px; font-size:14px; }
-  #chatInput{ width:100%; box-sizing:border-box; padding:10px; border:none; outline:none; }
-  #adminBtn{ position:fixed; right:18px; bottom:100px; width:56px; height:56px; border-radius:50%; display:none; z-index:50; font-size:24px; }
-  #openChatBtn{ position:fixed; left:18px; top:18px; width:52px; height:52px; border-radius:50%; display:none; align-items:center; justify-content:center; background:rgba(255,255,255,0.4); z-index:50; }
+body{
+  margin:0;
+  overflow:hidden;
+  background:#1e90ff;
+  font-family:Arial, sans-serif;
+}
+
+canvas{
+  display:block;
+  background:#87ceeb;
+  width:100%;
+  height:100vh;
+}
+
+/* MENU */
+#menu{
+  position:fixed;
+  inset:0;
+  background:#1e90ff;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  gap:12px;
+  z-index:50;
+}
+
+button{
+  padding:12px 22px;
+  font-size:18px;
+  border:none;
+  border-radius:10px;
+  cursor:pointer;
+}
+
+.solo{ background:#2ecc71; }
+.multi{ background:#00ffff; }
+.config{ background:#5f5f5f; color:#fff; }
+
+/* CONTROLES MOBILE */
+.btn{
+  position:fixed;
+  width:70px;
+  height:70px;
+  border-radius:50%;
+  background:rgba(255,255,255,0.35);
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:28px;
+  user-select:none;
+  z-index:40;
+}
+
+#left{ left:18px; bottom:18px; }
+#right{ left:100px; bottom:18px; }
+#jump{ right:18px; bottom:18px; }
+
+/* CHAT ESTILO ROBLOX */
+#openChatBtn{
+  position:fixed;
+  left:18px;
+  top:18px;
+  width:52px;
+  height:52px;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  background:rgba(0,0,0,0.45);
+  color:white;
+  font-size:24px;
+  z-index:50;
+  cursor:pointer;
+}
+
+#chatBar{
+  position:fixed;
+  bottom:90px;
+  left:10px;
+  width:calc(100% - 20px);
+  max-width:420px;
+  background:rgba(0,0,0,0.75);
+  color:white;
+  border-radius:14px;
+  display:none;
+  z-index:45;
+  overflow:hidden;
+}
+
+#messages{
+  max-height:160px;
+  overflow-y:auto;
+  padding:10px;
+  font-size:14px;
+}
+
+#messages div{
+  margin-bottom:4px;
+}
+
+#chatInput{
+  width:100%;
+  box-sizing:border-box;
+  padding:10px;
+  border:none;
+  outline:none;
+  background:#111;
+  color:white;
+}
 </style>
 </head>
+
 <body>
 
 <!-- MENU -->
 <div id="menu">
-  <h1 style="color:white; text-shadow:1px 1px #000;">🐱 Rikcat Adventures</h1>
-  <div>
-    <button id="soloBtn" class="solo">Solo</button>
-    <button id="multiBtn" class="multi">Multiplayer</button>
-  </div>
-  <button id="configBtn" class="config">Configurações</button>
+  <h1 style="color:white;">🐱 Rikcat Adventures</h1>
+  <button id="soloBtn" class="solo">Solo</button>
+  <button id="multiBtn" class="multi">Multiplayer</button>
 </div>
 
-<!-- CONFIG -->
-<div id="configScreen">
-  <div class="config-box">
-    <label>Nick</label>
-    <input id="nickInput" placeholder="Seu nick" maxlength="16">
-
-    <label>Skin</label>
-    <select id="skinSelect">
-      <option value="rikcat">Rikcat</option>
-      <option value="polvo">Polvo</option>
-    </select>
-
-    <label>Cor do Rikcat</label>
-    <input id="colorSelect" type="color" value="#FFB000">
-
-    <div style="display:flex; gap:8px; justify-content:flex-end; margin-top:6px;">
-      <button id="saveConfig">Salvar</button>
-      <button id="openAdminBtn">Código para ADMs 🎮</button>
-    </div>
-  </div>
-</div>
-
-<!-- CANVAS -->
 <canvas id="canvas"></canvas>
 
-<!-- MOBILE CONTROLS -->
+<!-- CONTROLES -->
 <div id="left" class="btn">⬅️</div>
 <div id="right" class="btn">➡️</div>
 <div id="jump" class="btn">🚀</div>
@@ -69,9 +141,6 @@
   <div id="messages"></div>
   <input id="chatInput" placeholder="Mensagem...">
 </div>
-
-<!-- ADMIN -->
-<button id="adminBtn">🔥</button>
 
 <script type="module" src="./game.js"></script>
 </body>
