--- a/index.html
+++ b/index.html
@@ -43,7 +43,29 @@ button{
 
 .solo{ background:#2ecc71; }
 .multi{ background:#00ffff; }
-.config{ background:#5f5f5f; color:#fff; }
+.config{ background:#555; color:white; }
+
+/* CONFIG */
+#configScreen{
+  position:fixed;
+  inset:0;
+  display:none;
+  background:rgba(0,0,0,0.8);
+  z-index:60;
+  align-items:center;
+  justify-content:center;
+}
+
+.config-box{
+  background:#4a90e2;
+  padding:16px;
+  width:300px;
+  border-radius:12px;
+  color:white;
+  display:flex;
+  flex-direction:column;
+  gap:8px;
+}
 
 /* CONTROLES MOBILE */
 .btn{
@@ -64,7 +86,7 @@ button{
 #right{ left:100px; bottom:18px; }
 #jump{ right:18px; bottom:18px; }
 
-/* CHAT ESTILO ROBLOX */
+/* CHAT ROBLOX */
 #openChatBtn{
   position:fixed;
   left:18px;
@@ -72,7 +94,7 @@ button{
   width:52px;
   height:52px;
   border-radius:50%;
-  display:flex;
+  display:none;
   align-items:center;
   justify-content:center;
   background:rgba(0,0,0,0.45);
@@ -103,13 +125,8 @@ button{
   font-size:14px;
 }
 
-#messages div{
-  margin-bottom:4px;
-}
-
 #chatInput{
   width:100%;
-  box-sizing:border-box;
   padding:10px;
   border:none;
   outline:none;
@@ -126,6 +143,26 @@ button{
   <h1 style="color:white;">🐱 Rikcat Adventures</h1>
   <button id="soloBtn" class="solo">Solo</button>
   <button id="multiBtn" class="multi">Multiplayer</button>
+  <button id="configBtn" class="config">Configurações</button>
+</div>
+
+<!-- CONFIG -->
+<div id="configScreen">
+  <div class="config-box">
+    <label>Nick</label>
+    <input id="nickInput" maxlength="16">
+
+    <label>Skin</label>
+    <select id="skinSelect">
+      <option value="rikcat">Rikcat</option>
+      <option value="polvo">Polvo</option>
+    </select>
+
+    <label>Cor</label>
+    <input id="colorInput" type="color" value="#FFB000">
+
+    <button id="saveConfig">Salvar</button>
+  </div>
 </div>
 
 <canvas id="canvas"></canvas>
