--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ button{
   gap:8px;
 }
 
-/* CONTROLES MOBILE */
+/* MOBILE */
 .btn{
   position:fixed;
   width:70px;
@@ -78,7 +78,6 @@ button{
   align-items:center;
   justify-content:center;
   font-size:28px;
-  user-select:none;
   z-index:40;
 }
 
@@ -86,7 +85,7 @@ button{
 #right{ left:100px; bottom:18px; }
 #jump{ right:18px; bottom:18px; }
 
-/* CHAT ROBLOX */
+/* CHAT */
 #openChatBtn{
   position:fixed;
   left:18px;
@@ -97,10 +96,10 @@ button{
   display:none;
   align-items:center;
   justify-content:center;
-  background:rgba(0,0,0,0.45);
+  background:rgba(0,0,0,0.6);
   color:white;
   font-size:24px;
-  z-index:50;
+  z-index:55;
   cursor:pointer;
 }
 
@@ -114,8 +113,7 @@ button{
   color:white;
   border-radius:14px;
   display:none;
-  z-index:45;
-  overflow:hidden;
+  z-index:50;
 }
 
 #messages{
@@ -159,7 +157,7 @@ button{
     </select>
 
     <label>Cor</label>
-    <input id="colorInput" type="color" value="#FFB000">
+    <input id="colorInput" type="color" value="#00ff79">
 
     <button id="saveConfig">Salvar</button>
   </div>
