--- a/index.html
+++ b/index.html
@@ -156,8 +156,11 @@ button{
       <option value="polvo">Polvo</option>
     </select>
 
-    <label>Cor</label>
-    <input id="colorInput" type="color" value="#00ff79">
+    <label>Cor do Corpo</label>
+<input id="bodyColorInput" type="color" value="#ffffff">
+
+<label>Cor do Nariz</label>
+<input id="faceColorInput" type="color" value="#ff00ff">
 
     <button id="saveConfig">Salvar</button>
   </div>
